docs/css/style.css
@import url("https://fonts.googleapis.com/css?family=Poppins&display=swap");

* {
  box-sizing: border-box;
}

html,
body {
  padding: 0;
  margin: 0;
  width: 100%;
  height: 100%;
  background: #fff;
  font-family: "Poppins", sans-serif;
  letter-spacing: 0.2px;
  display: flex;
  justify-content: center;
  align-items: center;
  color: #334;
}

.container {
  position: relative;
  width: 100%;
  max-width: 600px;
  height: 100%;
  max-height: 900px;
  display: grid;
  grid-template-rows: auto auto 1fr auto;
  margin: 0 auto;
  background: #fff;
  border-radius: 3px;
  box-shadow: 6px 6px 20px rgba(51, 51, 68, 0.2);
}

header {
  margin-top: 20px;
  align-self: flex-start;
  width: 100%;
  padding: 0 5%;
}

.brand {
  font-size: 24px;
  width: 90%;
  margin: auto;
}

.brand span {
  color: #f55;
}

form {
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 150px;
  z-index: 100;
  background: transparent;
}

form input {
  height: 50px;
  width: 90%;
  box-sizing: border-box;
  padding: 15px;
  border: 2px solid #f77;
  border-radius: 30px;
  font-size: 16px;
  font-family: "Poppins",
    sans-serif;
}

form input:focus {
  outline: none;
}

.todo-list-container {
  width: 100%;
  overflow: auto;
}

.todo-list-container::-webkit-scrollbar {
  width: 5px;
}

.todo-list-container::-webkit-scrollbar-track {
  background: transparent;
}

.todo-list-container::-webkit-scrollbar-thumb {
  background: #f55;
}

.todo-list-container::-webkit-scrollbar-thumb:hover {
  background: #f77;
}

#todo-list {
  list-style: none;
  padding: 0;
  margin: 0;
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.todo-item {
  position: relative;
  display: flex;
  box-shadow: 1px 1px 10px rgba(51, 51, 68, 0.2);
  min-height: 40px;
  width: 90%;
  overflow: hidden;
  margin-bottom: 10px;
  align-items: center;
  transition: all 0.5s ease;
}

.todo-task {
  flex: 1;
  padding: 10px;
  max-width: calc(100% - 100px);
  overflow-wrap: break-word;
  font-size: 16px;
}

.del-btn,
.done-btn {
  border: none;
  height: 100%;
  width: 40px;
  padding: 0 10px;
  cursor: pointer;
  background: #fff;
  color: #f55;
  font-size: 20px;
  position: absolute;
}

.done-btn {
  right: 40px;
}

.del-btn {
  right: 0;
}

.del-btn:focus,
.done-btn:focus {
  outline: none;
}

.del-btn:hover,
.done-btn:hover {
  color: #f55;
}

.author-comment {
  height: 50px;
  display: flex;
  justify-content: center;
  align-items: flex-end;
}

small span {
  color: #f55;
}

.del-transition {
  opacity: 0 !important;
  transform: translateY(25px);
}

.added-transition {
  animation: appear 0.3s ease;
}

.completed-task {
  background: #eee;
  text-decoration: line-through;
}

.no-todo {
  color: #666;
  font-style: italic;
}

@keyframes appear {
  from {
    opacity: 0;
    transform: translateY(25px);
  }

  to {
    opacity: 100;
    transform: translateY(0);
  }
}

@media (min-height: 900px) {
  .todo-list-container {
    max-height: 700px;
  }
}

@media (max-width: 600px) {
  .container {
    height: 100vh;
  }
}

